# clang-centaurus-ubuntu16

./: CMakeLists.txt  Deliverable1
include/: Makefile
include/centaurus/: Makefile  __acl_api_types.h  __acl_sys_impl.h  centaurus_acl.h  centaurus_common.h
include/system/: Makefile  math.h  stdlib.h
lib/AST/: ASTContext.cpp  CMakeLists.txt  Centaurus.cpp  DeclPrinter.cpp  OpenACC.cpp  Stmt.cpp  StmtPrinter.cpp  StmtProfile.cpp
lib/Analysis/: CallGraph.cpp
lib/Basic/: IdentifierTable.cpp  Module.cpp  SourceManager.cpp
lib/CodeGen/: CGStmt.cpp
lib/Driver/: Driver.cpp  Tools.cpp  Tools.h
lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp
lib/Lex/: PPDirectives.cpp  PPLexerChange.cpp  Pragma.cpp  Preprocessor.cpp
lib/Parse/: CMakeLists.txt  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParsePragma.cpp  ParsePragma.h  Parser.cpp  (+3 more)
tools/: CMakeLists.txt
tools/accll/: CMakeLists.txt  CentaurusConfig.hpp  ClangFormat.cpp  Common.cpp  Common.hpp  Reduction.h  Stages.cpp  Stages.hpp  Types.hpp  __accll.h  __acl_api_types.h  __internal_openacc.h  accll.cpp  centaurus_common.h  libaccll.c  libopenacc.c  ocl_compiler.cpp  ocl_utils.cpp  ocl_utils.hpp  openacc.h
tools/accll/Transforms/OCLInfo/: OCLInfo.cpp
tools/accll/config/: FindOpenCL.cmake
tools/acl/: CMakeLists.txt  CentaurusConfig.hpp  ClangFormat.cpp  ClangFormat.hpp  Common.cpp  Common.hpp  Stages.cpp  Stages.hpp  Types.hpp  acl.cpp  ocl_compiler.cpp  ocl_utils.cpp  ocl_utils.hpp
tools/acl/Transforms/OCLInfo/: CMakeLists.txt  Makefile  OCLInfo.cpp
tools/acl/config/: FindOpenCL.cmake
(+66 files in other folders)
